--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,5 +1,5 @@
 <ul class="topbar">
 	<a href="/me"><li><u>A</u>bout</li></a>
-	<a href="https://www.instagram.com/heartofhim" target="_blank"><li><u>T</u>witter</li></a>
+	<a href="https://www.instagram.com/heartofhim" target="_blank"><li><u>I</u>nstagram</li></a>
 	<a href="http://soundcloud.com/h01000110" target="_blank"><li><u>S</u>oundcloud</li></a>
 </ul>
