--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -2,6 +2,6 @@
 <hr>
 <br>
 <div class="donate">
-	<p>E-mail : nasil2n -at- naver -dot- com</p>
+	<p>E-mail : nasil2n {at} naver {dot} com</p>
 	<p>Bitcoin Wallet <i class="fa fa-btc"></i> 1Agt7r7aCAeWk5DyXXNyJXAXC4xxysiWjJ<br>Ethereum Wallet <i class="fa fa-money"></i> 0x19BD447c94499BdcA154Dc1BeF9FCf1f4c427C16</p>
 </div>
