--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
 		<div class="tag_list">
 			<ul id="tag-list">
 				<li><a href="/" ><img src="/assets/img/disk.png" />(C:)</a>
+				<li><a href="/" ><img src="/assets/img/disk.png" />(D:)</a>	
 			<ul>
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
