--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,21 +38,12 @@
 				<li><a href="/tag/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="/assets/img/folder.ico" />{{ tag[0] | replace:'-', ' ' }}</a></li>
 				{% endfor %}
 			</ul>
-				</li>
+				</li><a href="/" ><img src="/assets/img/disk.png" />(C:)</a>	
 			</ul>
-		</div>
-		{% include topbar.html %}
-		<div class="tag_list">
-			<ul id="tag-list">
-				<li><a href="/" ><img src="/assets/img/disk.png" />(:)</a>	
-			<ul>
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
 				<li><a href="/tag/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="/assets/img/folder.ico" />{{ tag[0] | replace:'-', ' ' }}</a></li>
 				{% endfor %}
-			</ul>
-				</li>
-			</ul>
 		</div>
 		<div class="post_list">
 			{% unless page.date%}
