--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 		{% include topbar.html %}
 		<div class="tag_list">
 			<ul id="tag-list">
-				<li><a href="/" ><img src="/assets/img/disk.png" />(C:)</a>	
+				<li><a href="/" ><img src="/assets/img/disk.png" />(Tech C:)</a>	
 			<ul>
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
@@ -40,7 +40,7 @@
 			</ul>
 					
 			<ul id="tag-list">	
-				</li><a href="/" ><img src="/assets/img/disk.png" />(D:)</a>	
+				</li><a href="/" ><img src="/assets/img/disk.png" />(Life D:)</a>	
 			<ul>
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
