--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,16 +31,17 @@
 		{% include topbar.html %}
 		<div class="tag_list">
 			<ul id="tag-list">
-				<li><a href="/" ><img src="/assets/img/disk.png" />(C:) - Tech</a>	
+				<li><a href="/" ><img src="/assets/img/disk.png" />(C:) - Tech</a></li>	
 			<ul>
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
 				<li><a href="/tag/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="/assets/img/folder.ico" />{{ tag[0] | replace:'-', ' ' }}</a></li>
 				{% endfor %}
+				</li>
 			
 					
 				
-				</li><a href="/" ><img src="/assets/img/disk.png" />(D:) - Life</a>	
+				<li><a href="/" ><img src="/assets/img/disk.png" />(D:) - Life</a></li>	
 			
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
