--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 		{% include topbar.html %}
 		<div class="tag_list">
 			<ul id="tag-list">
-				<li><a href="/" ><img src="/assets/img/disk.png" />(C:) - Tech</a></li>	
+				<li><a href="/" ><img src="/assets/img/disk.png" />(C:) - Tech</a>
 			<ul>
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
@@ -41,13 +41,14 @@
 			
 					
 				
-				<li><a href="/" ><img src="/assets/img/disk.png" />(D:) - Life</a></li>	
+				<a href="/" ><img src="/assets/img/disk.png" />(D:) - Life</a></li>	
 			
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
 				<li><a href="/tag/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="/assets/img/folder.ico" />{{ tag[0] | replace:'-', ' ' }}</a></li>
 				{% endfor %}
 				</li>
+			</li>
 			</ul>
 		</div>
 		<div class="post_list">
