--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 			
 					
 				
-				<a href="/" ><img src="/assets/img/disk.png" />(D:) - Life</a></li>	
+				<li><a href="/" ><img src="/assets/img/disk.png" />(D:) - Life</a></li>	
 			
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
